Validator issue fixed

--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -5,6 +5,7 @@
         <label>{{"postJob.jobTitle" | translate}}</label>
         <input type="text" class="form-control" [placeholder]="'postJob.jobTitle' | translate"/>
       </div>
+      <app-control-messages [control]="f['title']"></app-control-messages>
     </div>
   </div>
   <div class="row mt-2">
