Post job completed

--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -1,9 +1,9 @@
-<div >
+<div formGroupName="jobInfo">
   <div class="row mt-5">
     <div class="col-lg-8 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.jobTitle" | translate}}</label>
-        <input type="text" class="form-control" [placeholder]="'postJob.jobTitle' | translate"/>
+        <input formControlName="title" type="text" class="form-control" [placeholder]="'postJob.jobTitle' | translate"/>
       </div>
       <app-control-messages [control]="f['title']"></app-control-messages>
     </div>
@@ -12,47 +12,90 @@
     <div class="col-lg-4 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.jobType" | translate}}</label>
-        <select class="form-control" name="job-type">
-          <option selected="" disabled="">Contract</option>
-          <option>Remote </option>
-          <option>Onsite </option>
-          <option>Full Time </option>
-          <option>Part Time </option>
-          <option>Contract </option>
-          <option>Temporary </option>
-          <option>Permanent </option>
-          <option>Freelancer </option>
-          <option>Internship </option>
+        <select formControlName="type" class="form-control" name="job-type">
+          <option [value]="''">Select</option>
+          <option [value]="6">Contract</option>
+          <option [value]="5">Remote </option>
+          <option [value]="">Onsite </option>
+          <option [value]="0">Full Time </option>
+          <option [value]="1">Part Time </option>
+          <option [value]="4">Temporary </option>
+          <option [value]="">Permanent </option>
+          <option [value]="2">Freelancer </option>
+          <option [value]="3">Internship </option>
         </select>
       </div>
+      <app-control-messages [control]="f['type']"></app-control-messages>
     </div>
     <div class="col-lg-4 col-md-6 d-flex">
       <div class=" form-group w-50">
         <label>{{"postJob.pay" | translate}}</label>
-        <select class="form-control" name="job-type">
-          <option selected="" disabled="">{{"common.select" | translate}} {{"postJob.pay" | translate}}</option>
-          <option>Hourly </option>
-          <option>Annual</option>
+        <select formControlName="salary_type" class="form-control" name="job-type">
+          <option value="" selected="" disabled="">{{"common.select" | translate}} {{"postJob.pay" | translate}}</option>
+          <option [value]="0">Hourly </option>
+          <option [value]="1">Annual</option>
         </select>
+        <app-control-messages [control]="f['salary_type']"></app-control-messages>
       </div>
+
       <div class=" form-group w-50 ml-2">
         <label>&nbsp;</label>
         <div class="input-group">
-          <select class="form-control w-40"  style="background: #eee;">
-            <option>$ </option>
-            <option>₹</option>
-            <option>£</option>
+          <select (change)="onChangeCurrentFormat($event?.target?.value)" formControlName="salary_currency" class="form-control w-40"  style="background: #eee;">
+            <option [value]="0">$</option>
+            <option [value]="1">₹</option>
+            <option [value]="2">£</option>
           </select>
-          <input type="text" aria-label="Last name" class="form-control w-60">
+          <input currencyFormatter [country]="currentCurrencyFormat" formControlName="salary" type="text" class="form-control w-60">
         </div>
+        <app-control-messages [control]="f['salary']"></app-control-messages>
       </div>
     </div>
   </div>
   <div class="row mt-2">
     <div class="col-lg-4 col-md-6">
       <div class=" form-group">
+        <label>{{"postJob.location" | translate}}</label>
+        <input
+        ngx-google-places-autocomplete
+        (onAddressChange)="handleAddressChange($event)"
+        formControlName="location"
+        type="text"
+        class="form-control"
+        placeholder="Type location...">
+      </div>
+      <app-control-messages [control]="f['location']"></app-control-messages>
+    </div>
+    <div class="col-lg-4 col-md-6">
+      <div class=" form-group">
+        <label>{{"postYourResume.city" | translate}}</label>
+        <input formControlName="city" type="text" class="form-control" [placeholder]="'postYourResume.city' | translate">
+      </div>
+      <app-control-messages [control]="f['city']"></app-control-messages>
+    </div>
+  </div>
+  <div class="row mt-2">
+
+    <div class="col-lg-4 col-md-6">
+      <div class=" form-group">
+        <label>{{"postYourResume.state" | translate}}</label>
+        <input formControlName="state" type="text" class="form-control" [placeholder]="'postYourResume.state' | translate">
+        <app-control-messages [control]="f['state']"></app-control-messages>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-6">
+      <div class=" form-group">
+        <label>{{"postYourResume.zipCode" | translate}}</label>
+        <input numbersOnly formControlName="zipcode" type="text" class="form-control" [placeholder]="'postYourResume.zipCode' | translate">
+      </div>
+      <app-control-messages [control]="f['zipcode']"></app-control-messages>
+    </div>
+  </div>
+  <div class="row mt-2">
+    <div class="col-lg-4 col-md-6">
+      <div class=" form-group">
         <label>{{"postJob.country" | translate}}</label>
-        <select class="form-control" name="job-type">
+        <select formControlName="country" class="form-control" name="job-type">
           <option selected="" disabled="">{{"postJob.country" | translate}}</option>
           <option>India </option>
           <option>United States </option>
@@ -69,25 +112,12 @@
           <option>Singapore </option>
         </select>
       </div>
-    </div>
-    <div class="col-lg-4 col-md-6">
-      <div class=" form-group">
-        <label>{{"postJob.location" | translate}}</label>
-        <input type="text" class="form-control" placeholder="City and State">
-      </div>
-    </div>
-  </div>
-  <div class="row mt-2">
-    <div class="col-lg-4 col-md-6">
-      <div class=" form-group">
-        <label>{{"postYourResume.zipCode" | translate}}</label>
-        <input type="text" class="form-control" [placeholder]="'postYourResume.zipCode' | translate">
-      </div>
+      <app-control-messages [control]="f['country']"></app-control-messages>
     </div>
     <div class="col-lg-4 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.availability" | translate}}</label>
-        <select class="form-control">
+        <select formControlName="availability" class="form-control">
           <option selected="" disabled="">{{"postJob.availability" | translate}}</option>
           <option>Immediate</option>
           <option>15 Days</option>
@@ -95,6 +125,7 @@
           <option>45 Days</option>
           <option>60 Days</option>
         </select>
+        <app-control-messages [control]="f['availability']"></app-control-messages>
       </div>
     </div>
 
@@ -105,23 +136,25 @@
         <label>{{"postJob.remote" | translate}} </label>
          <div class="mt-2">
            <div class="custom-control custom-radio custom-control-inline">
-            <input type="radio" id="customRadioInline3" name="customRadioInline" class="custom-control-input">
-            <label class="custom-control-label" for="customRadioInline3">{{"common.yes" | translate}}</label>
+            <input [value]="true" id="remote_PJ_Y" formControlName="remote" type="radio" class="custom-control-input">
+            <label class="custom-control-label" for="remote_PJ_Y">{{"common.yes" | translate}}</label>
           </div>
           <div class="custom-control custom-radio custom-control-inline">
-            <input type="radio" id="customRadioInline4" name="customRadioInline" class="custom-control-input">
-            <label class="custom-control-label" for="customRadioInline4">{{"common.no" | translate}}</label>
+            <input [value]="false" id="remote_PJ_N" formControlName="remote" type="radio" class="custom-control-input">
+            <label class="custom-control-label" for="remote_PJ_N">{{"common.no" | translate}}</label>
           </div>
         </div>
       </div>
+      <app-control-messages [control]="f['remote']"></app-control-messages>
     </div>
   </div>
   <div class="row mt-2">
     <div class="col-md-12">
       <div class="form-group">
         <label>{{"postJob.jobDescription" | translate}}</label>
-        <textarea name="job-description" rows="4" class="form-control" [placeholder]="'postJob.jobDescription' | translate"></textarea>
+        <textarea formControlName="description" name="job-description" rows="4" class="form-control" [placeholder]="'postJob.jobDescription' | translate"></textarea>
       </div>
+      <app-control-messages [control]="f['description']"></app-control-messages>
     </div>
   </div>
 </div>
