--- a/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 tabs-animated" id="myTab">
-        <form method="post" [formGroup]="postJobForm" (ngSubmit)="postJob()">
+        <form method="post" #postJobNgForm="ngForm" [formGroup]="postJobForm">
           <app-post-job-header
           [currentTabInfo]="currentTabInfo"
           (onTabChangeEvent)="onHeaderTabChange($event)">
@@ -24,13 +24,11 @@
           <div class="tab-content" [@animSlider]="slidingCounter">
 
             <app-job-information
-            [postJobForm]="postJobForm"
             *ngIf="currentTabInfo.tabNumber == 1"
             [currentTabInfo]="currentTabInfo">
             </app-job-information>
 
             <app-requirement-criteria
-            [postJobForm]="postJobForm"
             *ngIf="currentTabInfo.tabNumber == 2"
             [currentTabInfo]="currentTabInfo">
             </app-requirement-criteria>
@@ -38,11 +36,22 @@
           </div>
 
           <app-post-job-footer
+          (postJob)="postJob()"
           [postJobForm]="postJobForm"
           [currentTabInfo]="currentTabInfo"
           (onTabChangeEvent)="onFooterTabChange($event)"
           (onEnableJobPreviewModal)="onToggleJobPreviewModal($event)">
           </app-post-job-footer>
+
+
+          <app-job-preview
+          (postJob)="postJob()"
+          [postJobForm]="postJobForm"
+          *ngIf="isOpenedJobPreviewModal"
+          [toggleJobPreviewModal]="isOpenedJobPreviewModal"
+          (onEvent)="onToggleJobPreviewModal($event)">
+          </app-job-preview>
+
         </form>
 
       </div>
@@ -50,8 +59,4 @@
   </div>
 </section>
 
-<app-job-preview
-*ngIf="isOpenedJobPreviewModal"
-[toggleJobPreviewModal]="isOpenedJobPreviewModal"
-(onEvent)="onToggleJobPreviewModal($event)">
-</app-job-preview>
+
