--- a/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
@@ -1,17 +1,17 @@
-
-
-<div>
+<div formGroupName="requirement">
   <div class="row mt-5 ">
     <div class="col-lg-4 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.totalYearsOfExperience" | translate }}</label>
-        <input type="text" class="form-control w-25 text-center" value="8+">
+        <input numbersOnly formControlName="experience" type="text" class="form-control w-25 text-center" value="8+">
+        <app-control-messages [control]="f['experience']"></app-control-messages>
       </div>
     </div>
     <div class="col-lg-4 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.totalYearsOfSapExperience" | translate }}</label>
-        <input type="text" class="form-control w-25 text-center" value="5+">
+        <input numbersOnly formControlName="sap_experience" type="text" class="form-control w-25 text-center" value="5+">
+        <app-control-messages [control]="f['sap_experience']"></app-control-messages>
       </div>
     </div>
   </div>
@@ -20,7 +20,10 @@
     <div class="col-lg-12 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.domainExperience" | translate }}</label>
-        <input type="text" class="form-control" value="Automobile, Finance, Logistics, Shipping" data-role="tagsinput">
+        <ng-select [items]="industries?.items" bindLabel="name" [placeholder]="'postJob.sapModule' | translate" appendTo="body" multiple="true"
+          formControlName="domain">
+        </ng-select>
+        <app-control-messages [control]="f['domain']"></app-control-messages>
       </div>
     </div>
   </div>
@@ -30,53 +33,44 @@
       <label>{{"postJob.handsOnWith" | translate }} </label>
     </div>
   </div>
-  <ng-container>
-    <div class="row mt-2"  *ngFor="let item of skillArray; let i=index">
+  <div class="row mt-2" *ngFor="let ticket of t.controls; let i = index">
+    <ng-container [formGroup]="ticket">
       <div class="col-lg-4 col-md-6">
-        <input type="text" class="form-control" [placeholder]="'postJob.sapModule' | translate">
+        <input formControlName="domain" type="text" class="form-control"
+          [placeholder]="'postJob.sapModule' | translate">
+        <app-control-messages [control]="ticket['controls']['domain']"></app-control-messages>
       </div>
+
       <div class="col-lg-2 col-md-4">
         <div class="input-group mb-3">
-          <input type="text" class="form-control" placeholder="Exp">
+          <input numbersOnly formControlName="experience" type="text" class="form-control" placeholder="Exp">
           <div class="input-group-append ">
-            <select class="input-group-text" id="basic-addon2">
+            <select formControlName="quote" class="input-group-text" id="basic-addon2">
               <option>Yrs</option>
               <option>Mon</option>
             </select>
           </div>
+          <app-control-messages [control]="ticket['controls']['experience']"></app-control-messages>
         </div>
-      </div>
-      <div class="col-lg-1 col-md-2">
-        <button type="button" class="btn btn-outline-danger" style="line-height: 1.75; padding: .5rem 1.0rem;"
-            (click)="onRemove(i)"><i class="fas fa-times"></i></button>
 
       </div>
-    </div>
-    </ng-container>
-  <div class="row mt-2">
-    <div class="col-lg-4 col-md-6">
-      <input type="text" class="form-control" [placeholder]="'postJob.sapModule' | translate">
-    </div>
-    <div class="col-lg-2 col-md-4">
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Exp">
-        <div class="input-group-append ">
-          <select class="input-group-text" id="basic-addon2">
-            <option>Yrs</option>
-            <option>Mon</option>
-          </select>
-        </div>
+      <div class="col-lg-1 col-md-2">
+        <button *ngIf="i == 0" (click)="onDuplicate()" type="button" class="btn btn-outline-green"
+          style="line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
+        <button *ngIf="i != 0" type="button" class="btn btn-outline-danger"
+          style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
       </div>
-    </div>
-    <div class="col-lg-1 col-md-2">
-      <button (click)="onDuplicate()" type="button" class="btn btn-outline-green" style="line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
-    </div>
+    </ng-container>
   </div>
   <div class="row mt-3">
     <div class="col-lg-12 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.knowledgeOnOtherSapSkills" | translate }} </label>
-        <input type="text" class="form-control" value="SAP Mobility, SAP FICO, SAP BODS" data-role="tagsinput">
+        <ng-select [items]="skillArray?.items" bindLabel="tag" placeholder="Select item" appendTo="body" multiple="true"
+          formControlName="skills">
+        </ng-select>
+        <app-control-messages [control]="f['skills']"></app-control-messages>
+        <!-- <input type="text" class="form-control" value="SAP Mobility, SAP FICO, SAP BODS" data-role="tagsinput"> -->
       </div>
     </div>
   </div>
@@ -84,13 +78,17 @@
     <div class="col-lg-9 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.programmingSkills" | translate }}</label>
-        <input type="text" class="form-control" value="Python, JAVA, Microsoft BI, Angular" data-role="tagsinput">
+        <ng-select  (add)="onAdd($event)" [addTag]="true" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+          formControlName="programming_skills">
+        </ng-select>
+        <app-control-messages [control]="f['programming_skills']"></app-control-messages>
+        <!-- <input type="text" class="form-control" value="Python, JAVA, Microsoft BI, Angular" data-role="tagsinput"> -->
       </div>
     </div>
     <div class="col-lg-3 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.endToEndImplementation" | translate }} </label>
-       <input type="text" class="form-control w-25" >
+        <input numbersOnly type="text" class="form-control w-25" formControlName="end_to_end_implementation">
       </div>
     </div>
   </div>
@@ -98,13 +96,19 @@
     <div class="col-lg-6 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.niceToHave" | translate }} </label>
-        <input type="text" class="form-control" value="Python, SAP BODS" data-role="tagsinput">
+        <ng-select  [addTag]="true" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+          formControlName="optinal_skills">
+        </ng-select>
+        <app-control-messages [control]="f['optinal_skills']"></app-control-messages>
       </div>
     </div>
     <div class="col-lg-6 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.certification" | translate }} </label>
-         <input type="text" class="form-control" value="CCNA, AWSC" data-role="tagsinput">
+        <ng-select  [addTag]="true" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+          formControlName="certification">
+        </ng-select>
+        <app-control-messages [control]="f['certification']"></app-control-messages>
       </div>
     </div>
   </div>
@@ -114,46 +118,53 @@
       </div>
       <div class=" form-group">
         <label class="font-weight-bold">{{"postJob.workAuthorization" | translate }} </label>
-         <div class="mt-2">
-           <div class="custom-control custom-checkbox custom-control-inline">
-            <input type="checkbox" id="customRadioInline5" name="customRadioInline2" class="custom-control-input">
-            <label class="custom-control-label" for="customRadioInline5">{{"postJob.shouldBeACitizenPr" | translate }}</label>
+        <div class="mt-2">
+          <div class="custom-control custom-radio custom-control-inline">
+            <input (change)="onChangeFieldValue('work_authorization', 0)" [value]="0" formControlName="work_authorization" type="radio" id="customRadioInline5"
+              name="work_authorization" class="custom-control-input">
+            <label class="custom-control-label"
+              for="customRadioInline5">{{"postJob.shouldBeACitizenPr" | translate }}</label>
           </div>
-          <div class="custom-control custom-checkbox custom-control-inline">
-            <input type="checkbox" id="customRadioInline6" name="customRadioInline2" class="custom-control-input">
-            <label class="custom-control-label" for="customRadioInline6">{{"postJob.shouldBeHavingAWorkPermit" | translate }}</label>
+          <div class="custom-control custom-radio custom-control-inline">
+            <input (change)="onChangeFieldValue('work_authorization', 1)" [value]="1" formControlName="work_authorization" type="radio" id="customRadioInline6"
+              name="work_authorization" class="custom-control-input">
+            <label class="custom-control-label"
+              for="customRadioInline6">{{"postJob.shouldBeHavingAWorkPermit" | translate }}</label>
           </div>
         </div>
       </div>
+      <app-control-messages [control]="f['work_authorization']"></app-control-messages>
     </div>
 
     <div class="col-lg-2 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.travel" | translate }} </label>
-        <select class="form-control">
-        <option selected="" disabled="">{{"common.select" | translate }}</option>
-        <option>No</option>
-        <option>25%</option>
-        <option>50%</option>
-        <option>75%</option>
-        <option>100%</option>
+        <select formControlName="travel_opportunity" class="form-control">
+          <option selected="" disabled="">{{"common.select" | translate }}</option>
+          <option>No</option>
+          <option>25%</option>
+          <option>50%</option>
+          <option>75%</option>
+          <option>100%</option>
         </select>
+        <app-control-messages [control]="f['travel_opportunity']"></app-control-messages>
       </div>
     </div>
   </div>
   <div class="row mt-5">
     <div class="col-lg-2 col-md-6">
-       <label class="font-weight-bold">{{"postJob.visaSponsorship" | translate }} </label>
+      <label class="font-weight-bold">{{"postJob.visaSponsorship" | translate }} </label>
     </div>
     <div class="col-lg-2 col-md-6">
       <div class=" form-group">
         <div class="showhideswitch">
-        <input type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch5">
-        <label class="showhideswitch-label" for="myshowhideswitch5">
-          <span class="showhideswitch-inner yesno"></span>
-          <span class="showhideswitch-switch"></span>
-        </label>
-      </div>
+          <input formControlName="visa_sponsorship" type="checkbox" name="visa_sponsorship"
+            class="showhideswitch-checkbox" id="myshowhideswitch5">
+          <label class="showhideswitch-label" for="myshowhideswitch5">
+            <span class="showhideswitch-inner yesno"></span>
+            <span class="showhideswitch-switch"></span>
+          </label>
+        </div>
       </div>
     </div>
   </div>
