--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -4,6 +4,8 @@
   animation-duration: 0.3s;
 }
 
+@import "~@ng-select/ng-select/themes/ant.design.theme.css";
+
 @keyframes modal-animation {
   0%   {transform: scale(0.5)}
   100% {transform: scale(1)}
