--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -199,30 +199,32 @@
           </ul>
         </div>
 
-        <div class="col-lg-12 border-top pt-3"> </div>
-        <div class="col-lg-4 caption">
-          <ul class="list-group">
-            <li *ngFor="let extra_criteria of childForm?.value?.jobPrev?.extra_criteria; let i = index"
-            class="list-group-item">{{extra_criteria?.title}}</li>
-          </ul>
-        </div>
-        <div class="col-lg-6 info">
-          <ul class="list-group">
-            <li
-            *ngFor="let extra_criteria of childForm?.value?.jobPrev?.extra_criteria; let i = index"
-            class="list-group-item">{{extra_criteria?.value}}</li></ul>
-        </div>
-        <div class="col-lg-2 caption">
-          <ul class="list-group">
-            <li *ngFor="let extra_criteria of childForm?.value?.jobPrev?.extra_criteria; let i = index"
-             class="list-group-item">
-              <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" (change)="onAddOrRemoveMustMatch($event, 'type')" class="custom-control-input" id="select10">
-                <label class="custom-control-label" for="select10">&nbsp;</label>
-              </div>
-            </li>
-          </ul>
-        </div>
+        <!-- <div class="col-lg-12 border-top pt-3"> </div> -->
+        <ng-container *ngIf="childForm?.value?.jobPrev?.extra_criteria?.length > 0">
+          <div class="col-lg-4 caption">
+            <ul class="list-group">
+              <li *ngFor="let extra_criteria of childForm?.value?.jobPrev?.extra_criteria; let i = index"
+              class="list-group-item">{{extra_criteria?.title}}</li>
+            </ul>
+          </div>
+          <div class="col-lg-6 info">
+            <ul class="list-group">
+              <li
+              *ngFor="let extra_criteria of childForm?.value?.jobPrev?.extra_criteria; let i = index"
+              class="list-group-item">{{extra_criteria?.value}}</li></ul>
+          </div>
+          <div class="col-lg-2 caption">
+            <ul class="list-group">
+              <li *ngFor="let extra_criteria of childForm?.value?.jobPrev?.extra_criteria; let i = index"
+               class="list-group-item">
+                <div class="custom-control custom-checkbox mr-sm-2">
+                  <input type="checkbox" (change)="onAddOrRemoveMustMatch($event, 'type')" class="custom-control-input" id="select10">
+                  <label class="custom-control-label" for="select10">&nbsp;</label>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </ng-container>
 
         <div class="col-lg-12 border-top pt-3"> </div>
 
