Post Job issue and register issue fixed

--- a/frontend/src/app/modules/features/common/verify-account/verify-account.component.html
+++ b/frontend/src/app/modules/features/common/verify-account/verify-account.component.html
@@ -1,2 +1,29 @@
-<p>your account has been verified successfully</p>
-<p>{{counter}}</p>
+
+<!-- <p>{{counter}}</p> -->
+
+<div class="container">
+<div class="row">
+  <div class="col-md-12 d-flex align-items-center justify-content-center"  style="height: 300px;">
+    <ng-container *ngIf="verifyAccountSuccess == true">
+      <i style="font-size: 48px;" class="fa fa-check-circle text-green" aria-hidden="true"></i>
+      <p class="pr-2">Thanks for joining SAP World. your account has been verified successfully. {{counter}} secs redirecting to login...</p>
+    </ng-container>
+    <ng-container *ngIf="verifyAccountSuccess == false">
+      <ng-container *ngIf="formError && formError?.length > 0; else elseTemplate">
+        <p class="pr-2"><i class="fa fa-times-circle" style="font-size:48px;color:red"></i></p>
+        <p class="" *ngFor="let item of formError; let i=index">
+          <ng-container *ngFor="let rule of item?.rules">
+            {{rule.message}}
+          </ng-container>
+        </p>
+        <p class="">Your verification has been failed. Please try again.</p>
+      </ng-container>
+      <ng-template #elseTemplate>
+        <p class="pr-2"><i class="fa fa-times-circle" style="font-size:48px;color:red"></i></p>
+        <p class="">Something went wrong. Your verification has been failed. Please try again.</p>
+      </ng-template>
+
+    </ng-container>
+  </div>
+</div>
+</div>
