--- a/frontend/src/app/shared/component/modal/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/shared/component/modal/forgot-password/forgot-password.component.html
@@ -6,20 +6,29 @@
       </button>
     </div>
     <div class="modal-body">
-      <form method="post">
+      <form [formGroup]="forgotPasswordForm" (ngSubmit)="onGetResetLink()">
         <h5 class="my-4" *ngIf="!isMailSent">Don't worry! Just fill your email and we'll send you a link to reset your password</h5>
 
-        <h5 class="my-4" *ngIf="isMailSent">Mail has been sent</h5>
+        <p class="text-green mx-auto pt-1" *ngIf="isMailSent">
+          <i style="font-size: 20px;" class="far fa-thumbs-up"></i>
+          Great. We shot you an email with a link for resetting your account password. Check your inbox.
+        </p>
 
         <ng-container *ngIf="!isMailSent">
           <div class="form-group">
             <div class="input-with-icon">
-              <input type="email" class="form-control" placeholder="Email Address" name="emailaddress">
+              <input formControlName="email" type="email" class="form-control" placeholder="Email Address" name="emailaddress">
               <i class="fas fa-envelope"></i>
             </div>
+            <app-control-messages [control]="f['email']"></app-control-messages>
           </div>
           <div class="form-group mt-3">
-            <a (click)="onMailSuccess(false)" href="javascript:;" class="btn btn-theme-blue btn-block btn-lg">Forgot Password</a>
+            <button [disabled]="!forgotPasswordForm.valid" type="submit" class="btn btn-theme-blue btn-block btn-lg">
+              <span [hidden]="isLoading">Submit</span>
+              <span [hidden]="!isLoading">
+                <i class="fa fa-spinner" aria-hidden="true"></i>
+              </span>
+            </button>
           </div>
         </ng-container>
       </form>
