--- a/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
@@ -3,14 +3,14 @@
     <div class="col-lg-4 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.totalYearsOfExperience" | translate }}</label>
-        <input numbersOnly formControlName="experience" type="text" class="form-control w-25 text-center" value="8+">
+        <input appMarkAsterisk numbersOnly formControlName="experience" type="text" class="form-control w-25 text-center" value="8+">
         <app-control-messages [control]="f['experience']"></app-control-messages>
       </div>
     </div>
     <div class="col-lg-4 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.totalYearsOfSapExperience" | translate }}</label>
-        <input numbersOnly formControlName="sap_experience" type="text" class="form-control w-25 text-center" value="5+">
+        <input appMarkAsterisk numbersOnly formControlName="sap_experience" type="text" class="form-control w-25 text-center" value="5+">
         <app-control-messages [control]="f['sap_experience']"></app-control-messages>
       </div>
     </div>
@@ -20,7 +20,7 @@
     <div class="col-lg-12 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.domainExperience" | translate }}</label>
-        <ng-select [items]="industries?.items" bindLabel="name" [placeholder]="'postJob.sapModule' | translate" appendTo="body" multiple="true"
+        <ng-select appMarkAsterisk [items]="industries?.items" bindLabel="name" [placeholder]="'postJob.sapModule' | translate" appendTo="body" multiple="true"
           formControlName="domain">
         </ng-select>
         <app-control-messages [control]="f['domain']"></app-control-messages>
@@ -31,9 +31,10 @@
   <div class="row mt-2">
     <div class="col-lg-12 col-md-6">
       <label>{{"postJob.handsOnWith" | translate }} </label>
+      <div appMarkAsterisk></div>
     </div>
   </div>
-  <div class="row mt-2" *ngFor="let ticket of t.controls; let i = index">
+  <div class="row mt-2" *ngFor="let ticket of t.controls; let i = index; let last = last">
     <ng-container [formGroup]="ticket">
       <div class="col-lg-4 col-md-6">
         <input formControlName="domain" type="text" class="form-control"
@@ -45,20 +46,20 @@
         <div class="input-group mb-3">
           <input numbersOnly formControlName="experience" type="text" class="form-control" placeholder="Exp">
           <div class="input-group-append ">
-            <select formControlName="quote" class="input-group-text" id="basic-addon2">
-              <option>Yrs</option>
-              <option>Mon</option>
+            <select formControlName="experience_type" class="input-group-text" id="basic-addon2">
+              <option value="year">Yrs</option>
+              <option value="month">Mon</option>
             </select>
           </div>
           <app-control-messages [control]="ticket['controls']['experience']"></app-control-messages>
         </div>
 
       </div>
-      <div class="col-lg-1 col-md-2">
-        <button *ngIf="i == 0" (click)="onDuplicate()" type="button" class="btn btn-outline-green"
-          style="line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
-        <button *ngIf="i != 0" type="button" class="btn btn-outline-danger"
+      <div class="col-lg-2 col-md-4">
+        <button type="button" class="btn btn-outline-danger"
           style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
+        <button *ngIf="last" (click)="onDuplicate()" type="button" class="btn btn-outline-green ml-2"
+          style="line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
       </div>
     </ng-container>
   </div>
@@ -66,7 +67,7 @@
     <div class="col-lg-12 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.knowledgeOnOtherSapSkills" | translate }} </label>
-        <ng-select [items]="skillArray?.items" bindLabel="tag" placeholder="Select item" appendTo="body" multiple="true"
+        <ng-select appMarkAsterisk [items]="skillArray?.items" bindLabel="tag" placeholder="Select item" appendTo="body" multiple="true"
           formControlName="skills">
         </ng-select>
         <app-control-messages [control]="f['skills']"></app-control-messages>
@@ -78,7 +79,7 @@
     <div class="col-lg-9 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.programmingSkills" | translate }}</label>
-        <ng-select  (add)="onAdd($event)" [addTag]="true" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+        <ng-select appMarkAsterisk (add)="onAdd($event)" [addTag]="true" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
           formControlName="programming_skills">
         </ng-select>
         <app-control-messages [control]="f['programming_skills']"></app-control-messages>
@@ -88,7 +89,7 @@
     <div class="col-lg-3 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.endToEndImplementation" | translate }} </label>
-        <input numbersOnly type="text" class="form-control w-25" formControlName="end_to_end_implementation">
+        <input appMarkAsterisk numbersOnly type="text" class="form-control w-25" formControlName="end_to_end_implementation">
       </div>
     </div>
   </div>
@@ -96,7 +97,7 @@
     <div class="col-lg-6 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.niceToHave" | translate }} </label>
-        <ng-select  [addTag]="true" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+        <ng-select appMarkAsterisk [addTag]="true" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
           formControlName="optinal_skills">
         </ng-select>
         <app-control-messages [control]="f['optinal_skills']"></app-control-messages>
@@ -105,7 +106,7 @@
     <div class="col-lg-6 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.certification" | translate }} </label>
-        <ng-select  [addTag]="true" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+        <ng-select appMarkAsterisk [addTag]="true" bindValue="label" bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
           formControlName="certification">
         </ng-select>
         <app-control-messages [control]="f['certification']"></app-control-messages>
@@ -118,7 +119,7 @@
       </div>
       <div class=" form-group">
         <label class="font-weight-bold">{{"postJob.workAuthorization" | translate }} </label>
-        <div class="mt-2">
+        <div appMarkAsterisk class="mt-2">
           <div class="custom-control custom-radio custom-control-inline">
             <input (change)="onChangeFieldValue('work_authorization', 0)" [value]="0" formControlName="work_authorization" type="radio" id="customRadioInline5"
               name="work_authorization" class="custom-control-input">
@@ -139,7 +140,7 @@
     <div class="col-lg-2 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.travel" | translate }} </label>
-        <select formControlName="travel_opportunity" class="form-control">
+        <select appMarkAsterisk formControlName="travel_opportunity" class="form-control">
           <option selected="" disabled="">{{"common.select" | translate }}</option>
           <option>No</option>
           <option>25%</option>
