--- a/frontend/src/app/shared/component/modal/register-form/register-form.component.html
+++ b/frontend/src/app/shared/component/modal/register-form/register-form.component.html
@@ -11,7 +11,7 @@
     <form method="post" [formGroup]="registerForm" (ngSubmit)="register()">
       <div class="form-group">
         <label>First Name</label>
-        <div class="input-with-icon">
+        <div appMarkAsterisk class="input-with-icon">
           <input type="text" class="form-control" [placeholder]="'First Name'" formControlName="firstName">
           <i class="fas fa-user-alt"></i>
         </div>
@@ -19,15 +19,15 @@
       </div>
       <div class="form-group">
         <label>Last Name</label>
-        <div class="input-with-icon">
+        <div appMarkAsterisk class="input-with-icon">
           <input type="text" class="form-control" [placeholder]="'Last Name'" formControlName="lastName">
           <i class="fas fa-user-alt"></i>
         </div>
         <app-control-messages [control]="f['lastName']"></app-control-messages>
       </div>
       <div class="form-group">
-        <label>Email </label>
-        <div class="input-with-icon">
+        <label>Email</label>
+        <div appMarkAsterisk class="input-with-icon">
           <input type="text" class="form-control" [placeholder]="'Email Address'" formControlName="email">
           <i class="fas fa-envelope"></i>
         </div>
@@ -38,7 +38,7 @@
       </div>
       <div class="form-group" *ngIf="router?.url.includes('employer') || router?.url.includes('agency')">
         <label>Company Name </label>
-        <div class="input-with-icon">
+        <div appMarkAsterisk class="input-with-icon">
           <input type="text" class="form-control" [placeholder]="'Company Name'" formControlName="companyName">
           <i class="fas fa-industry"></i>
         </div>
@@ -46,7 +46,7 @@
       </div>
       <div class="form-group">
         <label>Password </label>
-        <div class="input-with-icon">
+        <div appMarkAsterisk class="input-with-icon">
           <input type="password" class="form-control" [placeholder]="'Password'" formControlName="password">
           <i class="fas fa-key"></i>
         </div>
