--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -10,3 +10,10 @@
   0%   {transform: scale(0.5)}
   100% {transform: scale(1)}
 }
+
+.required-asterisk{
+  color: red;
+  font-weight: bold;
+  margin-left: 3px;
+  font-size: 1.2em;
+}
