Minor issue fixed

--- a/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
@@ -11,7 +11,7 @@
   </div>
 </section>
   <!-- //Sub Header Section -->
-<section class="my-5">
+<section class="my-5" style="min-height: 970px;">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 tabs-animated" id="myTab">
