--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -14,15 +14,18 @@
         <label>{{"postJob.jobType" | translate}}</label>
         <select appMarkAsterisk formControlName="type" class="form-control" name="job-type">
           <option [value]="''">Select</option>
-          <option [value]="6">Contract</option>
+          <option *ngFor="let title of sharedService.onGetJobType(); let i = index" [value]="i">
+            {{title}}
+          </option>
+          <!-- <option [value]="6">Contract</option>
           <option [value]="5">Remote </option>
-          <!-- <option [value]="">Onsite </option> -->
+          <option [value]="">Onsite </option>
           <option [value]="0">Full Time </option>
           <option [value]="1">Part Time </option>
           <option [value]="4">Temporary </option>
-          <!-- <option [value]="">Permanent </option> -->
+          <option [value]="">Permanent </option>
           <option [value]="2">Freelancer </option>
-          <option [value]="3">Internship </option>
+          <option [value]="3">Internship </option> -->
         </select>
       </div>
       <app-control-messages [control]="f['type']"></app-control-messages>
