--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -28,7 +28,7 @@
       </div>
       <div class="row mt-3 info-box">
         <div class="col-lg-12 text-right">
-          <h6>Choose Mandatory Requirement </h6>
+          <h6>Choose Mandatory Requirement <span class="required-asterisk">*</span></h6>
         </div>
         <div class="col-lg-4 caption">
           <ul class="list-group">
@@ -143,12 +143,12 @@
         </div>
         <div class="col-lg-6 info">
           <ul class="list-group">
-            <li class="list-group-item">{{postJobForm?.value?.jobInfo?.type}}</li>
+            <li class="list-group-item">{{sharedService.onGetJobType(postJobForm?.value?.jobInfo?.type)}}</li>
             <li class="list-group-item">{{onGetYesOrNoValue(postJobForm?.value?.jobInfo?.remote)}}</li>
             <li class="list-group-item">{{postJobForm?.value?.jobInfo?.availability}}</li>
             <li class="list-group-item">{{postJobForm?.value?.requirement?.travel_opportunity}}</li>
             <!-- <li class="list-group-item">{{postJobForm?.value?.jobInfo?.certification}}</li> -->
-            <li class="list-group-item">{{postJobForm?.value?.requirement?.work_authorization}}</li>
+            <li class="list-group-item">{{postJobForm?.value?.requirement?.work_authorization == 0 ? ("postJob.shouldBeACitizenPr" | translate) : ("postJob.shouldBeHavingAWorkPermit" | translate)}}</li>
             <li class="list-group-item">{{onGetYesOrNoValue(postJobForm?.value?.requirement?.visa_sponsorship)}}</li>
           </ul>
         </div>
@@ -246,7 +246,7 @@
         data-target="#addCriteria">Add Another Criteria</button>
       <button (click)="onClickCloseBtn(false)" type="button" class="btn btn-secondary"
         data-dismiss="modal">Edit</button>
-      <button (click)="onRedirectDashboard(false)" type="button" class="btn btn-theme-blue">Post Job</button>
+      <button [disabled]="!postJobForm.valid" (click)="onRedirectDashboard(false)" type="button" class="btn btn-theme-blue">Post Job</button>
     </div>
   </div>
 </ng-template>
